# server/app.js
@@ -9,6 +9,7 @@ import swaggerUi from "swagger-ui-express";
 
 import dbConnect from "./config/db.js";
 import authRouter from "./routes/auth.routes.js"
+import categoryRouter from "./routes/category.routes.js"
 
 dotenv.config();
 dbConnect();
@@ -23,6 +24,7 @@ app.use(e.json());
 app.use(cookieParser());
 
 app.use("/auth", authRouter);
+app.use("/category", categoryRouter)
 
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
